# A01794692_A5-2

./: .flake8  .gitignore  README.md  pyproject.toml
ComputeSales/data/: SalesResults.txt  catalogue.json  sales_records.json  sales_records100.json  test_file.txt
ComputeSales/src/: computeSales.py  compute_sales.py
ComputeSales/src/flake8_reports/: flake8_issues_20250209_024522.txt  flake8_issues_20250209_024824.txt  flake8_issues_20250209_024906.txt  flake8_issues_20250209_025009.txt  flake8_issues_20250209_025047.txt  flake8_issues_20250209_025636.txt  flake8_issues_20250209_025659.txt  flake8_issues_20250209_025828.txt  flake8_issues_20250209_030010.txt  flake8_issues_20250209_030436.txt
ComputeSales/src/utils/: file_processor.py
ComputeSales/tests/: test_compute_sales.py  test_main.py
